forgot placeholder text

--- a/tests/horse/index.html
+++ b/tests/horse/index.html
@@ -31,7 +31,7 @@
   <h1>The Horse Button™</h1>
   <button id="horsebutton" title="The Horse Button™"><div>🐴</div></button>
   <p>Please click <span class="glow">The Horse Button™</span> at your own risk.</p>
-  <h2 id="visiting"></h2>
+  <h2 id="visiting">Visiting...</h2>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
 <script src="./script.js"></script>
 </body>
