fix horse button link on sitelist

--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -67,7 +67,7 @@
     </article>
     -->
     <article>
-      <a href="/tests/horse.html">The Horse Button™</a><br>
+      <a href="/tests/horse/index.html">The Horse Button™</a><br>
       The Horse Button™ takes you to a random registered .horse domain.<br>
       THE LIST IS NOT FILTERED FOR DANGEROUS CONTENT. CLICK AT YOUR OWN RISK.<br>
       Originally made in about an hour.
