add darkreader lock to horse button

--- a/tests/horse/index.html
+++ b/tests/horse/index.html
@@ -11,6 +11,7 @@
   <meta property="og:description" content="Press it if you dare">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://spax.zone/images/misc/horse.png" type="image/png">
+  <meta name="darkreader-lock">
   <link rel="icon" href="/images/misc/horse.png">
   <link rel="stylesheet" href="./styles.css">
 </head>
