--- a/tests/horse/index.html
+++ b/tests/horse/index.html
@@ -30,9 +30,9 @@
     </div>
   </noscript>
   <h1>The Horse Button™</h1>
-  <button id="horsebutton" title="The Horse Button™"><div>🐴</div></button>
   <p>Please click <span class="glow">The Horse Button™</span> at your own risk.</p>
-  <h2 id="visiting">Visiting...</h2>
+  <button id="horsebutton" title="The Horse Button™"><div>🐴</div></button>
+  <h2 id="visiting">About to visit <code>horse</code>...</h2>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
 <script src="./script.js"></script>
 </body>
