nahua ref sheet update with actually correct colors and lower res image

--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -31,6 +31,14 @@
       #refcontainer {
         position: relative;
       }
+      #ayo {
+        position: absolute;
+        width: 8%;
+        height: 13%;
+        left: 27%;
+        bottom: 36%;
+        cursor: not-allowed;
+      }
       #clarifications-header {
         display: inline-block;
         margin-bottom: 10px;
@@ -40,21 +48,6 @@
           display: none;
         }
       }
-      #shitasscolors {
-        display: flex;
-        flex-flow: column;
-        gap: 1rem;
-      }
-      #shitasscolors div {
-        z-index: 1;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        cursor: pointer;
-        border-radius: 100%;
-        width: 2.5%;
-        height: 4.2%;
-      }
     </style>
   </head>
   <body>
@@ -62,27 +55,20 @@
       <span id="clarifications-header">!! Scroll down for clarifications !!</span>
       <div id="refcontainer">
         <img src="/images/art/nahua-bananas-refsheet.png" alt="Reference sheet for Nahua (Na-hoo-wa), a light blue axolotl with dark blue, yellow, and orange accents. She's shown from the front (both clothed and nude) and back; she looks cheery in the clothed picture and flustered in the nude one, which is censored with an eye-popping smiley. She's wearing shorts, kneesocks, a tanktop with an up arrow on it, and headphones. She is 5 feet 3 inches (160 centimeters) tall, 19 years old, and uses she/they pronouns. Design notes: Always wears headphones or ear-coverings (she looks weird without them); doesn't wear furs (they stick uncomfortably to the mucus on her skin); yellow eyelash-things are optional, but iconic; as an amphibian, she doesn't have breasts; hair is made out of kelp or something, IDK, go wild; has minor transformative powers (lore).">
-        <div id="shitasscolors">
-          <!--I'm annoyed that windows doesn't display image colors properly so these divs are overlayed-->
-          <div style="background-color:#b0e4fa; top:16.0%; right:34.95%;"></div>
-          <div style="background-color:#d6fcfd; top:21.1%; right:34.75%;"></div>
-          <div style="background-color:#1b4050; top:25.7%; right:34.70%;"></div>
-          <div style="background-color:#f7d371; top:30.9%; right:34.75%;"></div>
-          <div style="background-color:#fdfbe5; top:35.75%; right:34.65%;"></div>
-          <div style="background-color:#ee8782; top:40.8%; right:34.55%;"></div>
-          <div style="background-color:#ede0be; top:46.0%; right:34.43%;"></div>
-          <div style="background-color:#4e0101; top:50.8%; right:34.35%;"></div>
-        </div>
+        <div id="ayo" title="ayo what you doin over there"></div>
       </div>
       Artist: 1LikeBananas<br>
-      Alt text: <a href="https://goatygoats.com/">Goaty Goats</a>
+      Alt text: <a href="https://goatygoats.com/">Goaty Goats</a><br>
+      <a href="https://cdn.spax.zone/nahua-ref-sheet.png">High Res Version</a>
     </article>
     <article>
       Extra clarifications:<br>
       1. She has four fingers, not three.<br>
       2. Yes, her gills (or <a href="https://en.wikipedia.org/wiki/External_gills">rami</a>) are stylized like that.<br>
       3. Lore reasons for the minor transformative powers will be explained when I'm bothered to write it.<br>
-      If you need any other clarifications, <a href="https://cohost.org/Spax/ask">feel free to reach out and ask</a>!
+      4. Her outfit doesn't need to be the one in the ref! She does tend to prefer more open/breathable clothing though.<br>
+      5. She goes for a tomboy-ish look.<br>
+      If you need any other clarifications, feel free to reach out and ask me on discord!
     </article>
     <article>
       If you got javascript enabled<noscript> (you don't)</noscript>, you can copy the hex colors by clicking on its respective square:<br>
@@ -102,7 +88,7 @@
       </div>
     </article>
     <article class="short">
-      Last updated: September 26th, 2024<br>
+      Last updated: November 10th, 2024<br>
     </article>
     <article class="short">
       (And <a href="./index.html">click here</a> to see the main page!)
