update the embed image to be the higher quality one

--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Nahua Ref Sheet</title>
-    <meta property="og:image" content="https://spax.zone/images/art/nahua-bananas-refsheet.png" type="image/png">
+    <meta property="og:image" content="https://cdn.spax.zone/nahua-ref-sheet.png" type="image/png">
     <meta property="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
     <style>
