thematically underline the title text and update version number

--- a/tests/animal-gender-bodypart/index.html
+++ b/tests/animal-gender-bodypart/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="/tests/animal-gender-bodypart/icon.png">
 </head>
 <body>
-  <h1 id="title">Animal Gender Bodypart</h1>
+  <h1 id="title"><span>Animal</span> <span>Gender</span> <span>Bodypart</span></h1>
   <button id="spin-button" onclick="spin()"><div>Spin!</div></button>
   <div id="username"><span id="at">@</span><span id="animal"></span><span class="separator"></span><span id="gender"></span><span class="separator"></span><span id="bodypart"></span></div>
   <button id="copy-button" disabled><div>Copy</div></button>
@@ -33,7 +33,7 @@
     <br>
     tag <a class="tag" href="https://cohost.org/rc/tagged/animal%20gender%20bodypart" target="_blank">#animal gender bodypart</a> when sharing!
     <br>
-    <a href="https://github.com/SpiritAxolotl/spax.zone/blob/main/tests/animal-gender-bodypart/">v1.8.8a</a>
+    <a href="https://github.com/SpiritAxolotl/spax.zone/blob/main/tests/animal-gender-bodypart/">v1.9.1</a>
   </div>
 </body>
 </html>
