update my credit because rip cohost (and laughs nervously)

--- a/tests/animal-gender-bodypart/index.html
+++ b/tests/animal-gender-bodypart/index.html
@@ -29,7 +29,7 @@
   <div id="footer">
     inspired by <a href="https://cohost.org/bethposting/post/6065965-cohost-users-who-cam" target="_blank">this</a> chost
     <br>
-    made by <a href="https://cohost.org/Spax" target="_blank">@Spax</a>
+    made by <a href="https://bsky.app/profile/spax.zone" target="_blank">@Spax</a>
     <br>
     tag <a class="tag" href="https://cohost.org/rc/tagged/animal%20gender%20bodypart" target="_blank">#animal gender bodypart</a> when sharing!
     <br>
