--- a/html/index.html
+++ b/html/index.html
@@ -50,27 +50,78 @@
     part of the cohost webring<br><br>
     (this should be replaced with the actual webring by <a href="/js/js-controlled-webrings.js">this</a>)
   </article>
-  <!--<article class="buttons">
-    <a href="https://cyber.dabamos.de/88x31/"><img alt="88x31 buttons" src="https://cyber.dabamos.de/88x31/88x31.gif"></a>
-    <a href="https://web.archive.org/web/20141027160015/http://avdol.co.vu/post/91095908541"><img alt="graphic design is my passion" src="https://cyber.dabamos.de/88x31/graphicdesign.gif"></a>
-    <a href="https://yugoslavia.best/"><img alt="yugoslavia" src="https://cyber.dabamos.de/88x31/blinchik.gif"></a>
-    <a href="https://yugoslavia.best"><img alt="don't click here" src="https://cyber.dabamos.de/88x31/noclick.gif"></a>
-    since im commenting this out im thinking of adding some other buttons soon. like ones that dont exist currently
-    - cobalt.tools
-    - hosted by cloudflare
-    - glumbocoin (might already exist?)
-    - dweller's empty path / escaped chasm
-    also add the "i was on cohost!" one
-    also do some digging on friends profiles and display those here too
-    also also maybe make a custom replacable element so I don't have to copypaste this on every page I want it to be on?
-  </article>-->
-  <article class="centertext short">
-    [buttons coming soon]
+  <article class="buttons">
+    <a href="https://cyber.dabamos.de/88x31/">
+      <img src="https://cyber.dabamos.de/88x31/88x31.gif" alt="88x31 buttons">
+    </a>
+    <a href="https://web.archive.org/web/20141027160015/http://avdol.co.vu/post/91095908541">
+      <img src="https://cyber.dabamos.de/88x31/graphicdesign.gif" alt="graphic design is my passion">
+    </a>
+    <a href="https://yugoslavia.best/">
+      <img src="https://cyber.dabamos.de/88x31/blinchik.gif" alt="yugoslavia.best">
+    </a>
+    <a href="https://crouton.net/">
+      <img src="/buttons/crouton.png" alt="crouton.net">
+    </a>
+    <a href="https://mykocalico.neocities.org/buttons">
+      <img src="https://64.media.tumblr.com/0d4db0b90d2cfee79a934ce56163a0b9/298a6b99507e35eb-e4/s100x200/397c38c3259c7bbb0143a3614646f348c9cb3b57.gif" alt="i was on cohost!">
+    </a>
+    <a href="https://oat.zone/">
+      <img src="https://oat.zone/badges/oatzone.gif" alt="oat.zone">
+    </a>
+    <a href="https://goat.rest/">
+      <img src="https://goat.rest/88x31-anim.gif" alt="read goat.rest">
+    </a>
+    <a href="https://mayf.pink/">
+      <img src="https://mayf.pink/data/main/buttons/__mayf.gif" alt="mayf.pink">
+    </a>
+    <a href="https://icosahedr.online/">
+      <img src="https://misc.icosahedr.online/trinket/sapbutton.gif" alt="icosahedr.online">
+    </a>
+    <a href="https://alterae.online/">
+      <img src="https://alterae.online/res/88x31.webp" alt="alterae.online">
+    </a>
+    <a href="https://tempest.nekoweb.org/">
+      <img src="/buttons/pixel_snake_button.png" alt="tempest.nekoweb.org">
+    </a>
+    <a href="https://tulipbunny.au/">
+      <img src="https://tulipbunny.au/images/8831/tulipbunny%20button%20(jess).png" alt="tulipbunny.au">
+    </a>
+    <a href="https://quwyou.com/">
+      <img src="https://quwyou.com/media/buttons/button_quwyou.gif" alt="quwyou.com">
+    </a>
+    <a href="https://jecket.xyz/">
+      <img src="https://ryzzica.xyz/assets/badges/jecket.gif" alt="jecket.xyz">
+    </a>
+    <a href="https://easrng.net/">
+      <img src="https://badges.easrng.net/easrng.gif" alt="easrng.net">
+    </a>
+    <a href="https://coolstation.space/">
+      <img src="https://coolstation.space/cool_assets/88x31/coolstation.png" alt="coolstation.space">
+    </a>
+    <a href="https://www.wavebeem.com/">
+      <img src="https://www.wavebeem.com/button.webp" title="wavebeem.com">
+    </a>
+    <a href="https://tanukicomputing.neocities.org/">
+      <img src="https://tanukicomputing.neocities.org/buttons/Tanuki-Computing2.0.gif" alt="tanukicomputing.neocities.org">
+    </a>
+    <a href="https://twotwos.nekoweb.org/">
+      <img src="/buttons/two.png" alt="twotwos.nekoweb.org">
+    </a>
+    <a href="https://terezi.pyrope.net/">
+      <img src="https://terezi.pyrope.net/88x31.png" alt="terezi.pyrope.net">
+    </a>
+    <a href="https://matytoonistarchive.neocities.org/">
+      <img src="https://matytoonistarchive.neocities.org/images/88by31button.gif" alt="matytoonistarchive.neocities.org">
+    </a>
   </article>
   <article who="nahua" emotion="bashful">
     Add my button to your site!<br>
-    <a href="https://spax.zone/"><img src="https://spax.zone/images/buttons/button.gif"></a>
-    <textarea readonly>&lt;a href="https://spax.zone/"&gt;&lt;img src="https://spax.zone/images/buttons/button.gif"&gt;&lt;/a&gt;</textarea>
+    <a href="https://spax.zone/"><img src="https://spax.zone/buttons/spaxdotzone.gif"></a>
+    <textarea readonly>&lt;a href="https://spax.zone/"&gt;&lt;img src="https://spax.zone/buttons/spaxdotzone.gif"&gt;&lt;/a&gt;</textarea>
+  </article>
+  <article who="nahua" emotion="neutral">
+    (Hotlinking is okay)
   </article>
 </body>
 </html>
