more dialogue on the index page

--- a/html/index.html
+++ b/html/index.html
@@ -38,6 +38,9 @@
   <article who="nahua" emotion="neutral">
     Speaking of...
   </article>
+  <article who="nahua" emotion="joyful">
+    I've joined some webrings!
+  </article>
   <article id="mcai-webring" class="webring centertext short">
     part of the <span title="man, computers are incredible">m,cai</span> webring<br><br>
     <a href="https://coolstation.space/" class="nowrap">&lt;-</a> <a href="https://terezi.pyrope.net/ring">everyone</a> <a href="https://marbelynrye.000.pe/" class="nowrap">-&gt;</a>
@@ -49,6 +52,9 @@
   <article id="eggbug-eggring" class="webring centertext short">
     part of the cohost webring<br><br>
     (this should be replaced with the actual webring by <a href="/js/js-controlled-webrings.js">this</a>)
+  </article>
+  <article who="nahua" emotion="neutral">
+    I've also linked some 88x31 buttons for my friends' sites and other miscellaneous things.
   </article>
   <article class="buttons">
     <a href="https://cyber.dabamos.de/88x31/">
@@ -100,7 +106,7 @@
       <img src="https://coolstation.space/cool_assets/88x31/coolstation.png" alt="coolstation.space">
     </a>
     <a href="https://www.wavebeem.com/">
-      <img src="https://www.wavebeem.com/button.webp" title="wavebeem.com">
+      <img src="https://www.wavebeem.com/button.webp" alt="wavebeem.com">
     </a>
     <a href="https://tanukicomputing.neocities.org/">
       <img src="https://tanukicomputing.neocities.org/buttons/Tanuki-Computing2.0.gif" alt="tanukicomputing.neocities.org">
@@ -116,12 +122,91 @@
     </a>
   </article>
   <article who="nahua" emotion="bashful">
-    Add my button to your site!<br>
+    And don't forget to add my own button to your site!<br>
     <a href="https://spax.zone/"><img src="https://spax.zone/buttons/spaxdotzone.gif"></a>
     <textarea readonly>&lt;a href="https://spax.zone/"&gt;&lt;img src="https://spax.zone/buttons/spaxdotzone.gif"&gt;&lt;/a&gt;</textarea>
   </article>
   <article who="nahua" emotion="neutral">
     (Hotlinking is okay)
+  </article>
+  <article who="nahua" emotion="look">
+    (Also don't ask how I pronounced an image and HTML)
+  </article>
+  <article who="nahua" emotion="expressionless">
+    This index page will become less linear as soon as I decide to
+    start working on it, but for now this is what it'll be.
+  </article>
+  <article who="nahua" emotion="disappointed">
+    I've got so many things I wanna do lately; my site, gamedev, drawing,
+    playing new games, 3d modeling, restructuring my discord server, et cetera.
+  </article>
+  <article who="nahua" emotion="expressionless">
+    Motivation is hard, and committing to the things is also hard, but I'll get there in the end.
+  </article>
+  <article who="nahua" emotion="neutral">
+    Regardless, I should probably link some of my socials on here.
+  </article>
+  <article who="nahua" emotion="happy">
+    My Bluesky is (unsurprisingly) <a href="https://bsky.app/profile/spax.zone">spax.zone</a>.
+  </article>
+  <article who="nahua" emotion="joyful">
+    I've been using it a lot! Mostly shitposting my dumb thoughts and reposting cool stuff.
+  </article>
+  <article who="nahua" emotion="neutral">
+    As well as interacting with some of my mutuals.
+  </article>
+  <article who="nahua" emotion="joyful">
+    (I follow back if I know you!)
+  </article>
+  <article who="nahua" emotion="happy">
+    My Mastodon/Fediverse is <a href="https://furry.engineer/@spax">@spax@furry.engineer</a>.
+  </article>
+  <article who="nahua" emotion="neutral">
+    The domain is really funny, which is why I'm sticking with it.
+  </article>
+  <article who="nahua" emotion="look">
+    I don't use it too often, though.
+  </article>
+  <article who="nahua" emotion="happy">
+    My Discord (the most active platform I'm on) is <a href="https://discord.com/users/545395873891483662">@spaxolotl</a>.
+  </article>
+  <article who="nahua" emotion="look">
+    I am unfortunately at the friend limit though: 1000 friends.
+  </article>
+  <article who="nahua" emotion="sus">
+    (Thanks, Discord).
+  </article>
+  <article who="nahua" emotion="expressionless">
+    You can still join my Discord server <a href="https://discord.gg/the-spinning-rat-cult-1001605562498297966">here</a>.
+    Like I said earlier, it needs a restructuring, but if you just want to contact me,
+    this should be your best bet.
+  </article>
+  <article who="nahua" emotion="look">
+    (If the DoubleCounter bot gives you issues during verification, just DM me or a mod and mention that you came from my site).
+  </article>
+  <article who="nahua" emotion="happy">
+    I also have a Signal! My username there is Spax.01, and my chats expire after a week by default.
+  </article>
+  <article who="nahua" emotion="expressionless">
+    I uh, used to have a <a href="https://cohost.org">Cohost</a>, but the site is
+    shutting down at the end of the year and is currently in a read-only mode,
+    so no real use linking that.
+  </article>
+  <article who="nahua" emotion="nervous">
+    (I also have a very unflattering story relating to it).
+  </article>
+  <article who="nahua" emotion="happy">
+    Anyways, I believe those are all the socials I'm active on.
+  </article>
+  <article who="nahua" emotion="neutral">
+    If you missed the banner at the top of the page, <a href="./sitelist.html">here's a link to my full sitelist</a>
+    if you wanna see more stuff I've made/written.
+  </article>
+  <article who="nahua" emotion="bashful">
+    Thank you for visiting my site! It means a lot that you've read the whole thing.
+  </article>
+  <article who="nahua" emotion="joyful">
+    Stay tuned for updates!
   </article>
 </body>
 </html>
