change signal username from uppercase to lowercase

--- a/html/index.html
+++ b/html/index.html
@@ -185,7 +185,7 @@
     (If the DoubleCounter bot gives you issues during verification, just DM me or a mod and mention that you came from my site).
   </article>
   <article who="nahua" emotion="happy">
-    I also have a Signal! My username there is Spax.01, and my chats expire after a week by default.
+    I also have a Signal! My username there is spax.01, and my chats expire after a week by default.
   </article>
   <article who="nahua" emotion="expressionless">
     I uh, used to have a <a href="https://cohost.org">Cohost</a>, but the site is
