--- a/tests/ratspin/index.html
+++ b/tests/ratspin/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
   <title>Rat Spin</title>
+  <meta property="og:image" content="https://spax.zone/ratspin/ratspin.gif" type="image/gif">
+  <meta property="og:title" content="Rat Spin">
+  <meta property="og:description" content="look at him gooooo">
+  <meta name="darkreader-lock">
   <link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="./favicons/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="./favicons/apple-icon-72x72.png">
