added ratspin to the sitelist

--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -26,6 +26,10 @@
       <a href="./nahua-ref-sheet.html">Nahua Ref Sheet</a><br>
       The ref sheet of my OC, Nahua!
     </article>
+    <article>
+      <a href="/tests/ratspin/index.html">Rat Spin</a><br>
+      Watch the rat spin to the freebird solo!!
+    </article>
     <!--
     <article>
       <a href="./isspaxatschool.html">Is Spax At School?</a><br>
@@ -39,6 +43,7 @@
     <article>
       <a href="https://dep.spax.zone/">Dweller's Empty Path HTML Port</a><br>
       Temmie Chang's second RPG, Dweller's Empty Path!<br>
+      (THIS IS IN BETA)<br>
       This is technically a mod of the game that adds QoL features and fixes some bugs, but it stays true enough to the original game that I'm fine with hosting that instead.<br>
       The original game can be found <a href="https://tuyoki.itch.io/dwellers-empty-path">here</a>, and the modded one <a href="https://andrewharn.itch.io/dwellers-empty-path-plus">here</a>.<br>
       Playtime: ~2 hours
