metadata to tell apple devices it can hide the menu bar

--- a/tests/ratspin/index.html
+++ b/tests/ratspin/index.html
@@ -6,6 +6,7 @@
   <meta property="og:title" content="Rat Spin">
   <meta property="og:description" content="look at him gooooo">
   <meta name="darkreader-lock">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="./favicons/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="./favicons/apple-icon-72x72.png">
