--- a/tests/ratspin/index.html
+++ b/tests/ratspin/index.html
@@ -73,7 +73,7 @@
     #playpause {
       margin-bottom: 12px;
     }
-    @media only screen and (max-width: 512px) {
+    @media only screen and (max-aspect-ratio: 1/2) {
       #click {
         padding: 0 20%;
       }
