add muoring webring

--- a/html/index.html
+++ b/html/index.html
@@ -45,6 +45,10 @@
     part of the <span title="man, computers are incredible">m,cai</span> webring<br><br>
     <a href="https://coolstation.space/" class="nowrap">&lt;-</a> <a href="https://terezi.pyrope.net/ring">everyone</a> <a href="https://marbelynrye.000.pe/" class="nowrap">-&gt;</a>
   </article>
+  <article id="muoring" class="webring centertext short">
+    straight up in the muoring<br><br>
+    <a href="https://ring.icosahedr.online/previous?member=spax">&lt;-</a> <a href="https://ring.icosahedr.online/random">random</a> <a href="https://ring.icosahedr.online/next?member=spax">-&gt;</a>
+  </article>
   <article id="cobaltWebring" class="webring centertext short" name="spax.zone">
     part of the cobalt webring<br><br>
     (this should be replaced with the actual webring by <a href="/js/js-controlled-webrings.js">this</a>)
