--- a/tests/ratspin/index.html
+++ b/tests/ratspin/index.html
@@ -7,6 +7,8 @@
   <meta property="og:description" content="look at him gooooo">
   <meta name="darkreader-lock">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="application-name" content="Rat Spin">
+  <meta name="apple-mobile-web-app-title" content="Rat Spin">
   <link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="./favicons/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="./favicons/apple-icon-72x72.png">
