change app name and add dynamic margins

--- a/tests/ratspin/index.html
+++ b/tests/ratspin/index.html
@@ -68,7 +68,7 @@
       right: 0;
       top: 0;
       width: 5vh;
-      margin: 16px;
+      margin: 2vh;
       display: flex;
       flex-direction: column;
     }
